framec_tests/language_specific/typescript/v3_mir/negative/unbalanced_parens.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                -> $B(1, (2, 3)
            }
        }
}

